# rate-identification

./: .gitignore  README.md  pyproject.toml  run.sh  setup.sh
input/: w1d4_frametest3_pitch_p-.ulg
scripts/: identify.py
src/rate_identification/: __init__.py  cli.py  data.py  identification.py  plots.py
